Post register and list

--- a/api/composer.json
+++ b/api/composer.json
@@ -42,6 +42,9 @@
         ],
         "serve": [
             "php -S localhost:8000 -t public"
+        ],
+        "passport:client": [
+            "php artisan passport:client --personal -n"
         ]
     }
 }
