--- a/api/composer.json
+++ b/api/composer.json
@@ -40,6 +40,9 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
+        "migrate.fresh": [
+            "php artisan migrate:fresh; composer passport:client"
+        ],
         "serve": [
             "php -S localhost:8000 -t public"
         ],
