--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "node-sass": "^4.14.1",
