--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "next": "9.5.5",
+    "object-path": "^0.11.5",
     "react": "16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "16.14.0",
