--- a/web/package.json
+++ b/web/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
-    "next": "9.5.5",
+    "next": "^10.2.0",
     "object-path": "^0.11.5",
     "react": "16.14.0",
     "react-bootstrap": "^1.3.0",
